--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,11 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
     networks:
       - store-net
+    healthcheck:
+      test: [ "CMD", "echo", "ru", "|", "nc", "localhost", "2181" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
 
   kafka:
     image: 'confluentinc/cp-kafka:7.6.0'
@@ -34,6 +39,9 @@ services:
       KAFKA_CLUSTERS_0_ZOOKEEPER: 'zookeeper:2181'
     networks:
       - store-net
+    depends_on:
+      - kafka
+      - zookeeper
 
   kafka-app:
     build:
